ksv: Read shortcut item's position

Navigate to the list in a shortcut category, it will read the shortcut
item's position in the list, such as "1 of 6".

Bug: 876404
Change-Id: Iaf7efccb4df7f3ca6f188c4f5454fea9d2c17afe
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1562116
Commit-Queue: Tao Wu <wutao@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#651008}